<resources>
    <string name="app_name">TransportMainApp</string>
    <string name="register_user">Register User</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="fullName">Full Name</string>
    <string name="your_amazing_app_for_travel">Your Amazing App for travel</string>
    <string name="travelnow">TravelNow</string>
    <string name="password">Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_to_travel_now">Welcome back to Travel now</string>
    <string name="are_you_a">Are you a Driver or Commuter?</string>
    <string name="driver">DRIVER</string>
    <string name="commuter">COMMUTER</string>
    <string name="pickup_prompt">Choose a pick up location</string>
    <string name="drop_off_prompt">Choose a drop off location</string>
    <string-array name="pickup">
        <item>Kiambu road</item>
        <item>Thika Road</item>
        <item>Waiyaki way</item>
        <item>Langata Road</item>
        <item>Mombasa Road</item>
        <item>CBD</item>
    </string-array>
    <string-array name="drop_off">
        <item>Kiambu road</item>
        <item>Thika Road</item>
        <item>Waiyaki way</item>
        <item>Langata Road</item>
        <item>Mombasa Road</item>
        <item>CBD</item>
    </string-array>
    <string-array name="time">
        <item>6:30AM</item>
        <item>8:30AM</item>
        <item>10:30AM</item>
        <item>NOON</item>
        <item>4:30PM</item>
        <item>6:30PM</item>
    </string-array>
    <string name="title_activity_driver_map">Map</string>
</resources>