<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#FF018786"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/headingTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal"
        android:text="TravelNow"
        android:textAlignment="center"
        android:textColor="#CCCCCC"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/headerdescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Your Amazing App for travel"
        android:textStyle="italic"
        android:textSize="18sp"
        android:textColor="#CCCCCC"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/headingTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center_horizontal" />


    <TextView
        android:id="@+id/text_minivan1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/welcome_to_travel_now"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:fontFamily="@font/amsterdam"
        app:layout_constraintBottom_toBottomOf="@+id/minivan"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/headerdescription" />

    <TextView
        android:id="@+id/text_minivan2"
        android:layout_width="400dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/are_you_a"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_minivan1" />

    <Button
        android:id="@+id/driver_button_id"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginTop="150dp"
        android:backgroundTint="#0ED689"
        android:text="@string/driver"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/text_minivan2"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/text_minivan2"
        app:layout_constraintTop_toTopOf="@+id/text_minivan2"
        app:layout_constraintVertical_bias="0.329" />

    <Button
        android:id="@+id/passenger_button_id"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginTop="150dp"
        android:backgroundTint="#0ED689"
        android:text="@string/commuter"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/text_minivan2"
        app:layout_constraintHorizontal_bias="0.791"
        app:layout_constraintLeft_toLeftOf="@id/text_minivan2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_minivan2"
        app:layout_constraintVertical_bias="0.329" />

    <Button
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:backgroundTint="@color/colorAccent"
        android:text="User Profile"
        android:textColor="#1e1b21"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/text_minivan2"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="@id/driver_button_id"
        app:layout_constraintRight_toRightOf="@id/passenger_button_id" />

</androidx.constraintlayout.widget.ConstraintLayout>